fixed podcast link on homepage to go nowhere

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="./book/book.html">Books</a></li>
                 <li><a href="./placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
-                <li><a href="./podcast/podcat.html">++ call this something else beside podcasts ++</a></li>
+                <li><a href="#">++ call this something else beside podcasts ++</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
