--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="style.css">
     <title>Aotearoa Independent Film - Homepage</title>
 </head>
+
+function detectMob() {
+    return ( ( window.innerWidth <= 800 ) && ( window.innerHeight <= 600 ) );
+  }
+
+
 <body>
     <div class="header">
         Aotearoa Independent Film
