--- a/placinganorder/placinganorder.html
+++ b/placinganorder/placinganorder.html
@@ -32,14 +32,14 @@
                 Ordering Films & Books from AIF
             </div>
             <div class="bodytext">
-            To order a copy of any of the films listed in the <a href="../filmmakers/filmmakers.html">Filmmakers / films<a> section please download and fill out an <a style="font-weight: bold; color: green;" href="AIFOrderForm.pdf" target="_blank">Order Form</a> (click to download)<br>
+            To order a copy of any of the films listed in the <a href="../filmmakers/filmmakers.html">Filmmakers / films<a> section please download and fill out an <a style="font-weight: bold; color: green;" href="AIFOrderForm.ods" target="_blank">Order Form</a> (click to download)<br>
             You can e-mail your order form to theodore[at]aotearoaindependentfilm.com and I'll get back to you asap to sort payment and access to download and view your purchases.<br>
             Alternately you can give Theo a call directly, and let him know which films you're interesteed in purchasing and he'll help you sort out the details.<br>
             <br>
             Book purchases will be shipped once payment has been recieved. Please note that films are currently only avilable as digital downloads (no phyisical DVDs/BluRays yet, sorry).<br>
             If you have issues downloading large files then get in touch and we'll try sort out mailing you a USB stick or something.<br>
             <br>
-            <a style="font-weight: bold; color: green; font-size: 20px;" href="AIFOrderForm.pdf" target="_blank">AIF Order Form</a>
+            <a style="font-weight: bold; color: green; font-size: 20px;" href="AIFOrderForm.ods" target="_blank">AIF Order Form</a>
             
             </div>
         </div>
