struckout links on sidebar that don't work

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -18,9 +18,9 @@
                 <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="../book/book.html">Books</a></li>
                 <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
-                <li><a href="../podcast/podcast.html">++ call this something else beside podcasts ++</a></li>
-                <li><a href="#">Newsletter</a></li>
-                <li><a href="#">Rants</a></li>
+                <li><a href="#"><s>episodes</s></a></li>
+                <li><a href="#"><s>Newsletter</s></a></li>
+                <li><a href="#"><s>Rants</s></a></li>
                 <li> <br></li>
                 <li><a href="#">Contact</a></li>
                 <li> <br></li>
