--- a/filmmakers/filmmakers.html
+++ b/filmmakers/filmmakers.html
@@ -18,9 +18,9 @@
                 <li><a href="#">Filmmakers / films ('watch')</a></li>
                 <li><a href="../book/book.html">Book</a></li>
                 <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
-                <li><a href="#">Podcast Episodes</a></li>
-                <li><a href="#">Newsletter</a></li>
-                <li><a href="#">Rants</a></li>
+                <li><a href="#"><s>++ call this something else beside podcasts ++</s></a></li>
+                <li><a href="#"><s>Newsletter</s></a></li>
+                <li><a href="#"><s>Rants</s></a></li>
                 <li> <br></li>
                 <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
