--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <link rel="stylesheet" href="style.css">
     <title>Aotearoa Independent Film - Homepage</title>
 </head>
-
-function detectMob() {
-    return ( ( window.innerWidth <= 800 ) && ( window.innerHeight <= 600 ) );
-  }
-
-
 <body>
     <div class="header">
-        Aotearoa Independent Film
+        Aotearoa Independent Film<br>
+        <div style="font-size: 10px; color: white;">
+            this website has only been tested on firefox so probably won't work right on anything else.<br>
+            this website won't display right on phones so don't bother.</br>
+            copyright 2025 AIF
+        </div>
     </div>
 
     <div class="page">
@@ -22,11 +21,11 @@ function detectMob() {
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="./book/book.html">Books</a></li>
+                <li><a href="#"><s>Books</s></a></li>
                 <li><a href="./placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
-                <li><a href="#">++ call this something else beside podcasts ++</a></li>
-                <li><a href="#">Newsletter</a></li>
-                <li><a href="#">Rants</a></li>
+                <li><a href="#"><s>++ call this something else beside podcasts ++</s></a></li>
+                <li><a href="#"><s>Newsletter</s></a></li>
+                <li><a href="#"><s>Rants</s></a></li>
                 <li> <br></li>
                 <li><a href="./contact/contact.html">Contact</a></li>
                 <li> <br></li>
@@ -50,12 +49,12 @@ function detectMob() {
             </div>
         </div>
     </div> 
-    <div class="footer">
+    <!-- <div class="footer">
         this website has been designed to be viewed at 1080p resolutions. fuck 4K.<br>
         this website has only been tested on firefox so probably won't work right on anything else.<br>
         this website won't display right on phones so don't bother.</br>
         copyright 2025 AIF
-    </div>   
+    </div>    -->
 </body>
 
 </html>
