--- a/placinganorder/placinganorder.html
+++ b/placinganorder/placinganorder.html
@@ -15,16 +15,16 @@
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="../book/book.html">Book</a></li>
-                <li><a href="#">Ordering Films & Books from AIF</a></li>
-                <li><a href="#">Podcast Episodes</a></li>
-                <li><a href="#">Newsletter</a></li>
-                <li><a href="#">Rants</a></li>
+                <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="#"><s>Books</s></a></li>
+                <li><a href="./placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
+                <li><a href="#"><s>++ call this something else beside podcasts ++</s></a></li>
+                <li><a href="#"><s>Newsletter</s></a></li>
+                <li><a href="#"><s>Rants</s></a></li>
                 <li> <br></li>
-                <li><a href="../contact/contact.html">Contact</a></li>
+                <li><a href="./contact/contact.html">Contact</a></li>
                 <li> <br></li>
-                <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
+                <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
