added link to bandcamp in my filmamker page

--- a/filmmakers/f.theodore.elliott.html
+++ b/filmmakers/f.theodore.elliott.html
@@ -16,11 +16,11 @@
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="./filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="../book/book.html">Book</a></li>
+                <li><s style="color: darkred;">Book</s></li>
                 <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
-                <li><a href="#"><s>episodes</s></a></li>
-                <li><a href="#"><s>Newsletter</s></a></li>
-                <li><a href="#"><s>Rants</s></a></li>
+                <li><s style="color: darkred;">episodes</s></li>
+                <li><s style="color: darkred;">Newsletter</s></li>
+                <li><s style="color: darkred;">Rants</s></li>
                 <li> <br></li>
                 <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
@@ -33,9 +33,12 @@
             </div>
             <div class="bodytext">
             theodore is a filmmmaker<br>
-            He has made the following films which are avilable for purchase:<br>
+            I have made the following films which are avilable for purchase:<br>
             <br>
-            (To purchase, any films from AIF please visit the <a href="../placinganorder/placinganorder.html">'Placing An Order'</a> page linked here or on the sidebar.)
+            (To purchase, any films from AIF please visit the <a href="../placinganorder/placinganorder.html">'Placing An Order'</a> page linked here or on the sidebar.)<br>
+            <br>
+            i also make music. One day I'll set up a page here with info about all my albums so that I don't have to rely on 3rd party distributors <b style="color: rgb(150, 1, 1)">(fuck distributors, the future is self distributed)</b> 
+            but in the meantime the best place to check it out is <a href="https://ftheodoreelliott.bandcamp.com"> bdancamp </a>
             </div>
             
             <div class="film">
