--- a/placinganorder/placinganorder.html
+++ b/placinganorder/placinganorder.html
@@ -16,11 +16,11 @@
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="#"><s>Books</s></a></li>
-                <li><a href="./placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
-                <li><a href="#"><s>++ call this something else beside podcasts ++</s></a></li>
-                <li><a href="#"><s>Newsletter</s></a></li>
-                <li><a href="#"><s>Rants</s></a></li>
+                <li><s style="color: darkred;">Book</s></li>
+                <li><a href="#">Ordering Films & Books from AIF</a></li>
+                <li><s style="color: darkred;">episodes</s></li>
+                <li><s style="color: darkred;">Newsletter</s></li>
+                <li><s style="color: darkred;">Rants</s></li>
                 <li> <br></li>
                 <li><a href="./contact/contact.html">Contact</a></li>
                 <li> <br></li>
@@ -36,7 +36,7 @@
             You can e-mail your order form to theodore[at]aotearoaindependentfilm.com and I'll get back to you asap to sort payment and access to download and view your purchases.<br>
             Alternately you can give Theo a call directly, and let him know which films you're interesteed in purchasing and he'll help you sort out the details.<br>
             <br>
-            Book purchases will be shipped once payment has been recieved. Please note that films are currently only avilable as digital downloads (no phyisical DVDs/BluRays yet, sorry).<br>
+            <s style="color: darkred">Book purchases will be shipped once payment has been recieved.</s> Please note that films are currently only avilable as digital downloads (no phyisical DVDs/BluRays yet, sorry).<br>
             If you have issues downloading large files then get in touch and we'll try sort out mailing you a USB stick or something.<br>
             <br>
             <a style="font-weight: bold; color: green; font-size: 20px;" href="AIFOrderForm.ods" target="_blank">AIF Order Form</a>
