added rants page. Updated Sidebar on all pages

--- a/filmmakers/filmmakers.html
+++ b/filmmakers/filmmakers.html
@@ -16,11 +16,11 @@
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="#">Filmmakers / films ('watch')</a></li>
-                <li><a href="../book/book.html">Book</a></li>
+                <li><s style="color: darkred;">Book</s></li>
                 <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
-                <li><a href="#"><s>++ call this something else beside podcasts ++</s></a></li>
-                <li><a href="#"><s>Newsletter</s></a></li>
-                <li><a href="#"><s>Rants</s></a></li>
+                <li><s style="color: darkred;">episodes</s></li>
+                <li><s style="color: darkred;">Newsletter</s></li>
+                <li><a href="..rants/rants.html">Rants, Unsent E-mails & Other Misc. Texts</a></li>
                 <li> <br></li>
                 <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
