--- a/whywebsite/whywebsite.html
+++ b/whywebsite/whywebsite.html
@@ -15,11 +15,14 @@
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="../book/book.html">Book</a></li>
-                <li><a href="#"> __ Episodes</a></li>
-                <li><a href="#">Newsletter</a></li>
-                <li><a href="#">Rants</a></li>
+                <li><a href="./filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><s style="color: darkred;">Book</s></li>
+                <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
+                <li><s style="color: darkred;">episodes</s></li>
+                <li><s style="color: darkred;">Newsletter</s></li>
+                <li><a href="..rants/rants.html">Rants, Unsent E-mails & Other Misc. Texts</a></li>
+                <li> <br></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
                 <li><a href="#">Why does this website look like shit?</a></li>
             </ul>
