fixzing link to filmmkers page again

--- a/placinganorder/placinganorder.html
+++ b/placinganorder/placinganorder.html
@@ -15,7 +15,7 @@
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="./filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><s style="color: darkred;">Book</s></li>
                 <li><a href="#">Ordering Films & Books from AIF</a></li>
                 <li><s style="color: darkred;">episodes</s></li>
