--- a/filmmakers/filmmakers.html
+++ b/filmmakers/filmmakers.html
@@ -20,7 +20,7 @@
                 <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
                 <li><s style="color: darkred;">episodes</s></li>
                 <li><s style="color: darkred;">Newsletter</s></li>
-                <li><a href="..rants/rants.html">Rants, Unsent E-mails & Other Misc. Texts</a></li>
+                <li><a href="../rants/rants.html">Rants, Unsent E-mails & Other Misc. Texts</a></li>
                 <li> <br></li>
                 <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
