--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><s style="color: darkred;">Book</s></li>
-                <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
+                <li><a href="./placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
                 <li><s style="color: darkred;">episodes</s></li>
                 <li><s style="color: darkred;">Newsletter</s></li>
-                <li><a href="..rants/rants.html">Rants, Unsent E-mails & Other Misc. Texts</a></li>
+                <li><a href="./rants/rants.html">Rants, Unsent E-mails & Other Misc. Texts</a></li>
                 <li> <br></li>
-                <li><a href="../contact/contact.html">Contact</a></li>
+                <li><a href="./contact/contact.html">Contact</a></li>
                 <li> <br></li>
-                <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
+                <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
