fixed filmamaker link on rants page sidebar

--- a/whywebsite/whywebsite.html
+++ b/whywebsite/whywebsite.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="../index.html">Aotearoa Independent Film</a>
+        <a href="../index.html" style="color: green; text-decoration: none;">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
