--- a/contact/contact.html
+++ b/contact/contact.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        Aotearoa Independent Film
+        <a href="../index.html" style="color: green; text-decoration: none;">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
