added 2 rants to rants page

--- a/rants/rants.html
+++ b/rants/rants.html
@@ -30,6 +30,46 @@
         <div class="body">
             <b style="font-size: 24px; color: rgb(172, 0, 0);">Rants, Unsent E-mails & Other Misc. Textsbr></b><br>
             <br>
+            <b style="font-size: 20px">On Being A Failure</b> - 28th May 2025<br>
+            <br>
+            'You suck' - me<br>
+            <br>
+            My aim with this is not to inspire you<br>
+            My aim is to disinspire you<br>
+            You are trying to make a good film.<br>
+            Consider yourself a faluire beofre you start<br>
+            You're film will not be good<br>
+            You will not learn anything and you will not improve<br>
+            I hate that quote from Beckett<br>
+            “Ever tried. Ever failed. No matter. Try again. Fail again. Fail better.”<br>
+            (mostly, i suppose, cos it totally misrepresents Bectkett's meaning).<br>
+            If you're film was a faulire, would you still make it<br>
+            If it turns out bad (which it will), would you still make it<br>
+            If noo ne cares about it (which they won't), would you still make<br>
+            If people watch it and hate it (and hate you for making it) (which, if you're one of the very few lucky ones who manages to get people to see their film, they will) would you still make it<br>
+            <br>
+            My aim with this is not to inspire you<br>
+            My aim is to disinspire you<br>
+            You are trying to make a bad film.<br>
+            Consider yourself a faluire beofre you start<br>
+            Your film will not be interesting<br>
+            Your film will not be funny<br>
+            <br>
+            Don't rush to failure, you're already there.<br>
+            Don't be proud of failure, there's nothing here<br>
+            Don't aim for any kind of success (financial, career groeth, recognition), you will not acheieve it<br>
+            <br>
+            You have already acheieved everything you can<br>
+            <br>
+            now what?<br>
+            <br>
+            <b style="font-size: 20px">On Badness</b> - 28th May 2025<br>
+            <br>
+            Is it possible to intentionally make a bad film wihtout being ironic?<br>
+            ie. is it possible to try make something bad without making something for you and the audindce to 'laugh at'<br>
+            (in which case you're really trying to make something 'good at being bad', something funny in it's badness)<br>
+            Try make something genuie but still bad...<br>
+            <br>
             <b style="font-size: 20px">An unsent e-mail</b> - 21st May 2025<br>
             <br>
             Hi ------,<br>
