--- a/rants/rants.html
+++ b/rants/rants.html
@@ -30,6 +30,22 @@
         <div class="body">
             <b style="font-size: 24px; color: rgb(172, 0, 0);">Rants, Unsent E-mails & Other Misc. Textsbr></b><br>
             <br>
+            <b style="font-size: 20px">11th June 2025<br>
+            <br>
+            No ideas<br>
+            No bad idea<br>
+            No good ideas<br>
+            No ideas<br>
+            No point<br>
+            Anything done is a wast e of time<br>
+            wastewastewastewastewaste<br>
+            Bored<br>
+            Grouchy<br>
+            No fun<br>
+            Should do something<br>
+            No inspiration<br>
+            no fun<br>
+            <br>
             <b style="font-size: 20px">On Being A Failure</b> - 28th May 2025<br>
             <br>
             'You suck' - me<br>
