--- a/rants/rants.html
+++ b/rants/rants.html
@@ -30,7 +30,7 @@
         <div class="body">
             <b style="font-size: 24px; color: rgb(172, 0, 0);">Rants, Unsent E-mails & Other Misc. Textsbr></b><br>
             <br>
-            <b style="font-size: 20px">11th June 2025<br>
+            <b style="font-size: 20px">11th June 2025</b><br>
             <br>
             No ideas<br>
             No bad idea<br>
