--- a/rants/rants.html
+++ b/rants/rants.html
@@ -30,6 +30,21 @@
         <div class="body">
             <b style="font-size: 24px; color: rgb(172, 0, 0);">Rants, Unsent E-mails & Other Misc. Textsbr></b><br>
             <br>
+            <b style="font-size: 20px">17th Novemeber 2025</b><br>
+            <br>
+            whatever<br>
+            haven't written here in a while<br>
+            no news<br>
+            i guess I'm still working on stuff<br>
+            i dont know<br>
+            everything is bullshit<br>
+            advertising<br>
+            waste of time and clogs the air<br>
+            and the air is getting bad enough<br>
+            what a crock<br>
+            ...<br>
+            go make a movie<br>
+            <br>
             <b style="font-size: 20px">11th June 2025</b><br>
             <br>
             No ideas<br>
