--- a/rants/rants.html
+++ b/rants/rants.html
@@ -37,9 +37,10 @@
             no news<br>
             i guess I'm still working on stuff<br>
             i dont know<br>
-            everything is bullshit<br>
+            everything else is bullshit<br>
             advertising<br>
             waste of time and clogs the air<br>
+            just make the films and shut up about it<br>
             and the air is getting bad enough<br>
             what a crock<br>
             ...<br>
